--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,16 +85,51 @@ android:background="#4f20f9">
     android:layout_height="wrap_content"
     android:name="com.qoobico.calculator.FacebookFragment"
     android:id="@+id/fragment"
-    android:layout_above="@+id/twitter_login_button"
+    android:layout_above="@+id/tvRegisterLink"
     android:layout_alignLeft="@+id/btnLog"
     android:layout_alignStart="@+id/btnLog" />
 
-    <com.twitter.sdk.android.core.identity.TwitterLoginButton
-        android:id="@+id/twitter_login_button"
+
+
+   <TextView
+       android:id="@+id/tv_username"
+       android:textColor="#ffffff"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_above="@+id/sign_in_button"
+       android:layout_marginBottom="50dp"
+       android:layout_alignRight="@+id/textView2"
+       android:layout_alignEnd="@+id/textView2"
+       android:layout_toEndOf="@+id/btnLog"
+       android:layout_toRightOf="@+id/btnLog" />
+
+
+   <com.google.android.gms.common.SignInButton
+       android:id="@+id/sign_in_button"
+       android:layout_width="120dp"
+       android:layout_height="wrap_content"
+       android:layout_above="@+id/tvRegisterLink"
+       android:layout_centerHorizontal="true" />
+
+
+   <com.twitter.sdk.android.core.identity.TwitterLoginButton
+       android:id="@+id/login_button"
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:layout_alignTop="@+id/tv_username"
+       android:layout_toRightOf="@+id/textView"
+       android:layout_toEndOf="@+id/textView" />
+
+   <ImageButton
+        android:id="@+id/twitter_custom_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/tvRegisterLink"
-        android:layout_alignLeft="@+id/fragment"
-        android:layout_alignStart="@+id/fragment" />
+       android:background="@drawable/twitter"
+       android:layout_marginRight="10dp"
+       android:layout_marginBottom="10dp"
+       android:layout_below="@+id/login_button"
+       android:layout_toRightOf="@+id/login_button"
+       android:layout_toEndOf="@+id/login_button"></ImageButton>
+-->
 
 </RelativeLayout>
