--- a/app/src/main/res/layout/fragment_facebook.xml
+++ b/app/src/main/res/layout/fragment_facebook.xml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.qoobico.calculator.FacebookFragment">
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
+ android:orientation="vertical"
+    tools:context="com.qoobico.calculator.FacebookFragment"
+    android:weightSum="1">
+
 
     <com.facebook.login.widget.LoginButton
+        xmlns:facebook="http://schemas.android.com/apk/res-auto"
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:textColor="#ffffff"
+        />
+   <!--     facebook:com_facebook_login_text="LOGIN"
+        facebook:com_facebook_logout_text="Logout"  -->
+
+
+
+    <ImageButton
+          android:id="@+id/custom_fb_button"
+          android:layout_width="44dp"
+          android:layout_height="44dp"
+          android:layout_margin="10dp"
+          android:background="@drawable/fblogo"
+          android:layout_gravity="left|bottom"
+         />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="107dp"
+        android:layout_height="42dp"
         android:id="@+id/text_details"
-        android:textColor="#4f20f9"
+        android:textColor="#ffffff"
+        android:textSize="12dp"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_above="@+id/login_button"
         android:layout_toRightOf="@+id/login_button"
-        android:layout_toEndOf="@+id/login_button" />
+        android:layout_toEndOf="@+id/login_button"
+        android:layout_marginBottom="65dp" />
 
-</RelativeLayout>
+
+</FrameLayout>
