--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@ android:background="#4f20f9">
     android:layout_height="wrap_content"
     android:name="com.qoobico.calculator.FacebookFragment"
     android:id="@+id/fragment"
-    android:layout_above="@+id/tvRegisterLink"
+    android:layout_alignTop="@+id/twitter_custom_button"
     android:layout_alignLeft="@+id/btnLog"
     android:layout_alignStart="@+id/btnLog" />
 
@@ -101,35 +101,52 @@ android:background="#4f20f9">
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_toEndOf="@+id/btnLog"
-       android:layout_toRightOf="@+id/btnLog" />
+       android:layout_toRightOf="@+id/btnLog"
+       android:layout_gravity="right" />
 
 
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
-       android:layout_above="@+id/tvRegisterLink"
-       android:layout_centerHorizontal="true" />
+       android:layout_below="@+id/btnLog"
+       android:layout_centerHorizontal="true"
+       android:layout_marginTop="67dp" />
 
 
-   <com.twitter.sdk.android.core.identity.TwitterLoginButton
-       android:id="@+id/login_button"
-       android:layout_width="0dp"
-       android:layout_height="0dp"
+ <!--  <com.twitter.sdk.android.core.identity.TwitterLoginButton
+       android:id="@+id/twitter_login_button"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_username"
+       android:layout_alignLeft="@+id/tvRegisterLink"
+       android:layout_alignStart="@+id/tvRegisterLink" />  -->
+<ImageButton
+        android:id="@+id/twitter_custom_button"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+       android:background="@drawable/twitter"
+    android:layout_gravity="right"
+    android:layout_alignTop="@+id/sign_in_button"
+    android:layout_alignRight="@+id/tv_username"
+    android:layout_alignEnd="@+id/tv_username"></ImageButton>
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textAppearance="?android:attr/textAppearanceSmall"
+       android:text="Login with Twitter"
+       android:id="@+id/textView3"
+       android:textAlignment="center"
+       android:textColor="#ffffff"
+       android:layout_gravity="right"
+       android:textSize="10dp"
+       android:layout_below="@+id/sign_in_button"
+       android:layout_alignRight="@+id/tv_username"
+       android:layout_alignEnd="@+id/tv_username"
+       android:layout_above="@+id/tvRegisterLink"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />
 
-   <ImageButton
-        android:id="@+id/twitter_custom_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       android:background="@drawable/twitter"
-       android:layout_marginRight="10dp"
-       android:layout_marginBottom="10dp"
-       android:layout_below="@+id/login_button"
-       android:layout_toRightOf="@+id/login_button"
-       android:layout_toEndOf="@+id/login_button"></ImageButton>
--->
 
 </RelativeLayout>
