--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@ android:background="#4f20f9">
     android:layout_alignRight="@+id/etPass"
     android:layout_alignEnd="@+id/etPass" />
 
+
 <Button
     android:id="@+id/btnLog"
     android:layout_width="300dp"
@@ -85,7 +86,7 @@ android:background="#4f20f9">
     android:layout_height="wrap_content"
     android:name="com.qoobico.calculator.FacebookFragment"
     android:id="@+id/fragment"
-    android:layout_alignTop="@+id/twitter_custom_button"
+    android:layout_below="@+id/tv_username"
     android:layout_alignLeft="@+id/btnLog"
     android:layout_alignStart="@+id/btnLog" />
 
@@ -96,7 +97,7 @@ android:background="#4f20f9">
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_above="@+id/sign_in_button"
+       android:layout_above="@+id/custom_goog_btn"
        android:layout_marginBottom="50dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
@@ -105,31 +106,44 @@ android:background="#4f20f9">
        android:layout_gravity="right" />
 
 
-   <com.google.android.gms.common.SignInButton
+  <!-- <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLog"
        android:layout_centerHorizontal="true"
-       android:layout_marginTop="67dp" />
+       android:layout_marginTop="67dp" />   -->
 
 
- <!--  <com.twitter.sdk.android.core.identity.TwitterLoginButton
-       android:id="@+id/twitter_login_button"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignTop="@+id/tv_username"
-       android:layout_alignLeft="@+id/tvRegisterLink"
-       android:layout_alignStart="@+id/tvRegisterLink" />  -->
+
+
+   <ImageButton
+       android:id="@+id/custom_goog_btn"
+       android:layout_width="45dp"
+       android:layout_height="45dp"
+       android:background="@drawable/google"
+       android:layout_marginBottom="52dp"
+       android:layout_above="@+id/textView4"
+       android:layout_toLeftOf="@+id/textView2"
+       android:layout_toStartOf="@+id/textView2" />
+
+
+
+
+
+
+
+
 <ImageButton
         android:id="@+id/twitter_custom_button"
         android:layout_width="45dp"
         android:layout_height="45dp"
        android:background="@drawable/twitter"
     android:layout_gravity="right"
-    android:layout_alignTop="@+id/sign_in_button"
-    android:layout_alignRight="@+id/tv_username"
-    android:layout_alignEnd="@+id/tv_username"></ImageButton>
+
+    android:layout_below="@+id/tv_username"
+    android:layout_alignLeft="@+id/textView3"
+    android:layout_alignStart="@+id/textView3"></ImageButton>
 
    <TextView
        android:layout_width="wrap_content"
@@ -141,12 +155,60 @@ android:background="#4f20f9">
        android:textColor="#ffffff"
        android:layout_gravity="right"
        android:textSize="10dp"
-       android:layout_below="@+id/sign_in_button"
+
+       android:layout_below="@+id/twitter_custom_button"
+       android:layout_toRightOf="@+id/textView"
        android:layout_alignRight="@+id/tv_username"
        android:layout_alignEnd="@+id/tv_username"
-       android:layout_above="@+id/tvRegisterLink"
-       android:layout_toRightOf="@+id/textView"
-       android:layout_toEndOf="@+id/textView" />
+       android:layout_above="@+id/textView4" />
 
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textAppearance="?android:attr/textAppearanceSmall"
+       android:text="Login with Facebook"
+       android:id="@+id/textView4"
+       android:textAlignment="center"
+       android:layout_alignLeft="@+id/fragment"
+       android:layout_alignStart="@+id/fragment"
+       android:textColor="#ffffff"
+       android:textSize="10dp"
+
+       android:layout_above="@+id/tvRegisterLink"
+       android:layout_alignRight="@+id/fragment"
+       android:layout_alignEnd="@+id/fragment" />
+
+   <View
+       android:id="@+id/separator1"
+       android:layout_width="1px"
+       android:layout_height="80dp"
+       android:background="#ffffff"
+       android:layout_alignTop="@+id/fragment"
+       android:layout_toLeftOf="@+id/textView5"
+       android:layout_toStartOf="@+id/textView5" />
+   <View
+       android:id="@+id/separator2"
+       android:layout_width="1px"
+       android:layout_height="80dp"
+       android:background="#ffffff"
+       android:layout_below="@+id/tv_username"
+       android:layout_toRightOf="@+id/tvRegisterLink"
+       android:layout_toEndOf="@+id/tvRegisterLink" />
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textAppearance="?android:attr/textAppearanceSmall"
+       android:text="Login with Google"
+       android:id="@+id/textView5"
+       android:textColor="#ffffff"
+       android:textSize="10dp"
+       android:textAlignment="center"
+       android:layout_alignBottom="@+id/textView4"
+       android:layout_alignLeft="@+id/tvRegisterLink"
+       android:layout_alignStart="@+id/tvRegisterLink"
+       android:layout_below="@+id/twitter_custom_button"
+       android:layout_alignRight="@+id/custom_goog_btn"
+       android:layout_alignEnd="@+id/custom_goog_btn" />
 
 </RelativeLayout>
