--- a/app/src/main/res/layout-land/activity_forgor_pass.xml
+++ b/app/src/main/res/layout-land/activity_forgor_pass.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-   android:orientation="vertical"
-    tools:context=".ForgorPassActivity"
     android:background="#4f20f9">
-
     <TextView
         android:id="@+id/tvInfo"
         android:layout_width="275dp"
