--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,7 +8,7 @@
     <EditText
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:id="@+id/etUsername"
+        android:id="@+id/etLoginName"
         android:drawableLeft="@drawable/user"
         android:singleLine="true"
         android:textColor="#ffffff"
@@ -41,7 +41,7 @@
         android:singleLine="true"
         android:textColor="#ffffff"
         android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/etUsername"
+        android:layout_below="@+id/etLoginName"
         android:layout_centerHorizontal="true"
         android:layout_x="150dp"
         android:layout_y="110dp" />
