--- a/app/src/main/res/layout-land/activity_registr.xml
+++ b/app/src/main/res/layout-land/activity_registr.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    tools:context="com.qoobico.calculator.RegistrActivity"
     android:background="#4f20f9">
+
 
 
     <TextView
@@ -69,11 +66,9 @@
         android:layout_margin="25dp"
         android:text="Regisrter"
         android:background="#F404AC"
-        android:textColor="#ffffff"
         android:layout_below="@+id/etPass"
+        android:textColor="#ffffff"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal" />
 
-
 </LinearLayout>
-
