--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgotten Password?"
-        android:id="@+id/textView2"
+        android:id="@+id/tvForgPass"
         android:textColor="#ffffff"
         android:layout_gravity="right"
         android:layout_below="@+id/etPass"
@@ -70,9 +70,9 @@
         android:background="#F404AC"
         android:layout_x="150dp"
         android:layout_y="200dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_below="@+id/tvForgPass"
+        android:layout_alignRight="@+id/tvForgPass"
+        android:layout_alignEnd="@+id/tvForgPass" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -110,8 +110,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/custom_goog_btn"
         android:layout_marginBottom="50dp"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2"
+        android:layout_alignRight="@+id/tvForgPass"
+        android:layout_alignEnd="@+id/tvForgPass"
         android:layout_toEndOf="@+id/btnLog"
         android:layout_toRightOf="@+id/btnLog"
         android:layout_gravity="right" />
