--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@ android:background="#4f20f9">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Forgotten Password?"
-    android:id="@+id/textView2"
+    android:id="@+id/tvForgPass"
     android:textColor="#ffffff"
     android:layout_gravity="right"
     android:layout_below="@+id/etPass"
@@ -113,8 +113,8 @@ android:background="#4f20f9">
        android:layout_height="wrap_content"
        android:layout_above="@+id/custom_goog_btn"
        android:layout_marginBottom="50dp"
-       android:layout_alignRight="@+id/textView2"
-       android:layout_alignEnd="@+id/textView2"
+       android:layout_alignRight="@+id/tvForgPass"
+       android:layout_alignEnd="@+id/tvForgPass"
        android:layout_toEndOf="@+id/btnLog"
        android:layout_toRightOf="@+id/btnLog"
        android:layout_gravity="right" />
@@ -138,8 +138,8 @@ android:background="#4f20f9">
        android:background="@drawable/google"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/textView4"
-       android:layout_toLeftOf="@+id/textView2"
-       android:layout_toStartOf="@+id/textView2"
+       android:layout_toLeftOf="@+id/tvForgPass"
+       android:layout_toStartOf="@+id/tvForgPass"
        android:layout_x="163dp"
        android:layout_y="363dp" />
 
