--- a/app/src/main/res/layout/activity_forgor_pass.xml
+++ b/app/src/main/res/layout/activity_forgor_pass.xml
@@ -42,4 +42,12 @@
         android:background="#F404AC"
         android:layout_margin="25dp"
         android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/tvForgotPass"
+        android:textColor="#ffffff"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
